# storage/api-docs/api-docs.json
@@ -278,10 +278,10 @@
                                         "format": "string",
                                         "example": "Especie"
                                     },
-                                    "raza": {
+                                    "tamano": {
                                         "type": "string",
                                         "format": "string",
-                                        "example": "Raza"
+                                        "example": "tamano"
                                     },
                                     "edad": {
                                         "type": "integer",
@@ -1654,6 +1654,148 @@
                 }
             }
         },
+        "/rescates-animal/{id}": {
+            "put": {
+                "tags": [
+                    "Rescates"
+                ],
+                "summary": "Actualizar un rescate con información detallada del animal",
+                "description": "Actualizar un rescate existente con información detallada del animal proporcionada.",
+                "operationId": "updateRescateAnimal",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del rescate",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Datos del rescate con información detallada del animal",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id_usuario": {
+                                        "type": "integer",
+                                        "format": "int",
+                                        "example": 1
+                                    },
+                                    "direccion": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Nueva dirección del rescate"
+                                    },
+                                    "estado": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "En proceso"
+                                    },
+                                    "fecha_rescate": {
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "2023-11-20"
+                                    },
+                                    "informacion_adicional": {
+                                        "type": "string",
+                                        "format": "string"
+                                    },
+                                    "id_animal": {
+                                        "required": [
+                                            "nombre",
+                                            "especie",
+                                            "tamano",
+                                            "edad",
+                                            "descripcion"
+                                        ],
+                                        "properties": {
+                                            "nombre": {
+                                                "type": "string",
+                                                "format": "string",
+                                                "example": "Nuevo nombre del animal"
+                                            },
+                                            "especie": {
+                                                "type": "string",
+                                                "format": "string",
+                                                "example": "Nueva especie del animal"
+                                            },
+                                            "tamano": {
+                                                "type": "string",
+                                                "format": "string",
+                                                "example": "Nuevo tamaño del animal"
+                                            },
+                                            "edad": {
+                                                "type": "integer",
+                                                "format": "int",
+                                                "example": 4
+                                            },
+                                            "descripcion": {
+                                                "type": "string",
+                                                "format": "string",
+                                                "example": "Nueva descripción del animal"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Rescate actualizado exitosamente",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/rescate"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Rescate no encontrado",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Rescate no encontrado"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validación fallida",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Error de validación"
+                                        },
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/solicitudes": {
             "get": {
                 "tags": [
@@ -2006,7 +2148,7 @@
                     "especie": {
                         "type": "string"
                     },
-                    "raza": {
+                    "tamano": {
                         "type": "string"
                     },
                     "edad": {
